--- a/css/about.css
+++ b/css/about.css
@@ -68,21 +68,28 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  gap: 50px;
-  /* flex-direction: column; */
   width: 100%;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.3);
 }
 
-.experience h3 {
-  position: relative;
+.experience:first-child h3 {
+  display: flex;
+  align-items: center;
+  gap: 30px;
   color: #222;
-  margin-left: 30px;
+  margin-right: 20px;
+}
+.experience:last-child h3 {
+  display: flex;
+  align-items: center;
+  gap: 30px;
+  color: #222;
+  margin-right: 40px;
 }
 
 .experience i {
   font-size: 30px;
-  position: absolute;
+  /* position: absolute; */
   left: -33px;
   top: -2px;
   color: #333;
@@ -124,11 +131,35 @@
   }
 
   #about {
-    margin-top: 0;
+    margin: 3.5rem 0px 0px 0px;
+    padding: 0px 20px;
+    height: max-content;
+    text-align: start;
+    align-items: center;
+  }
+
+  .about-softskills {
+    flex-direction: column;
     display: none;
   }
 
+  .about-text p {
+    font-size: 15px;
+  }
+
+  .about-info {
+    flex-direction: column-reverse;
+    gap: 40px;
+    margin-top: 15px;
+  }
+
   .about-info img {
-    display: none;
+    width: 250px;
+    height: 250px;
+    margin-top: 0px;
+  }
+
+  .experience h3 {
+    font-size: 10px;
   }
 }
