--- a/css/components.css
+++ b/css/components.css
@@ -261,6 +261,11 @@
   box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.5);
 }
 
+.project-img.dark .fechar {
+  background-color: #fff;
+  color: #333;
+}
+
 .swiper {
   animation: modalAnimation 0.5s;
   height: max-content;
