--- a/css/mediasQ.css
+++ b/css/mediasQ.css
@@ -1,10 +1,13 @@
 @media (max-width: 800px) {
-  .arrow {
+  .arrow,
+  .arrowAbout,
+  .arrowSkills,
+  .arrowProjects {
     display: none;
   }
 
   body {
-    max-width: 600px;
+    width: 100%;
     margin: 0px 0px 0px 0px;
     padding: 0px;
   }
