--- a/css/projects.css
+++ b/css/projects.css
@@ -2,7 +2,7 @@
   margin-top: 0px;
   display: flex;
   align-items: center;
-  /* justify-content: center; */
+  justify-content: center;
   flex-direction: column;
   position: relative;
 }
@@ -152,10 +152,12 @@
   display: none;
 }
 
-@media (max-width: 600px) {
+@media (max-width: 800px) {
   #projects {
     margin-top: 7rem;
-    padding: 0px 20px;
+    margin-left: 20px;
+    margin-right: 20px;
+    padding: 0px 0px;
   }
   #projects h1 {
     margin-top: 0px;
@@ -166,14 +168,17 @@
     gap: 0px;
   }
   .projects-img img {
+    filter: blur(1px);
     margin-top: 10px;
-    max-width: 380px;
+    max-width: 99%;
+    margin: 0 auto;
   }
 
   .projects-img i {
     position: absolute;
-    bottom: 90px;
-    left: 180px;
+    bottom: 35%;
+    left: 50%;
+    transform: translate(-50%, -50%);
     font-size: 35px;
     cursor: pointer;
     color: #666;
