--- a/css/globals.css
+++ b/css/globals.css
@@ -75,7 +75,7 @@ input {
 input::placeholder {
   color: #333;
   opacity: 0.5;
-  font-size: 18px;
+  font-size: 16px;
 }
 
 input:focus,
@@ -90,9 +90,13 @@ textarea {
   border: 1px solid #333;
   width: 715px;
   font-family: "Poppins", sans-serif;
-  padding: 15px 15px;
+  padding: 10px 10px;
   font-size: 19px;
+}
+
+textarea::placeholder {
   color: #333;
+  opacity: 0.5;
 }
 
 form {
@@ -121,4 +125,25 @@ button.dark {
   color: #333;
   transition: all 0.3s ease;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.5);
+}
+
+@media (max-width: 800px) {
+  .arrow,
+  .arrowAbout,
+  .arrowSkills,
+  .arrowProjects {
+    display: none;
+  }
+
+  body {
+    width: 100%;
+    margin: 0px 0px 0px 0px;
+    padding: 0px;
+  }
+
+  section {
+    padding: 0px;
+    margin: 0px;
+    z-index: 0;
+  }
 }
