mudança na fonte do formulario de contato

--- a/css/contact.css
+++ b/css/contact.css
@@ -284,4 +284,10 @@
     gap: 30px;
     margin-top: 40px;
   }
+
+  input::placeholder {
+    color: #333;
+    opacity: 0.5;
+    font-size: 18px;
+  }
 }
