--- a/css/contact.css
+++ b/css/contact.css
@@ -2,6 +2,7 @@
   bottom: -130px;
   transform: rotate(180deg);
   right: -100px;
+  display: none;
 }
 
 #contact {
@@ -139,6 +140,8 @@
   align-items: center;
   gap: 5px;
   padding-bottom: 5px;
+  font-family: "Clash Display", sans-serif;
+  font-weight: 600;
 }
 
 #contact span.dark {
@@ -274,7 +277,7 @@
     display: flex;
     align-items: center;
     gap: 5px;
-    padding-top: 100px;
+    padding-top: 150px;
     padding-bottom: 5px;
   }
 
