mudança no dark mode e animaçoes dos icones de toggleMenu e darkMode no mobile

--- a/css/components.css
+++ b/css/components.css
@@ -385,6 +385,14 @@
   animation: animationTooltip 0.5s forwards;
 }
 
+.dark .toolTip {
+  background-color: #fff;
+}
+
+.dark .toolTip p {
+  color: #333;
+}
+
 @keyframes animationTooltip {
   from {
     filter: blur(15px);
