--- a/css/contact.css
+++ b/css/contact.css
@@ -7,7 +7,7 @@
 
 #contact {
   margin-top: 200px;
-  margin-bottom: 0px;
+  /* margin-bottom: 2rem; */
   display: flex;
   flex-direction: column;
   position: relative;
@@ -128,18 +128,19 @@
 .copy {
   align-self: center;
   position: relative;
-  bottom: -200px;
   font-size: 13px;
-  left: -550px;
   color: #444;
   opacity: 0.7;
+  width: 100%;
+  padding-top: 200px;
 }
 
 .copy span {
   display: flex;
   align-items: center;
   gap: 5px;
-  padding-bottom: 5px;
+  text-align: center;
+  justify-content: center;
   font-family: "Clash Display", sans-serif;
   font-weight: 600;
 }
@@ -148,7 +149,7 @@
   color: #fff;
 }
 
-@media (max-width: 650px) {
+@media (max-width: 800px) {
   #contact {
     margin-top: 7rem;
     margin-bottom: 0px;
@@ -266,18 +267,16 @@
   .copy {
     align-self: center;
     position: relative;
-    bottom: 0px;
     font-size: 10px;
-    left: 0px;
     color: #444;
+    padding-top: 150px;
     opacity: 0.7;
   }
 
   .copy span {
     display: flex;
     align-items: center;
-    gap: 5px;
-    padding-top: 150px;
+    justify-content: center;
     padding-bottom: 5px;
   }
 
