--- a/css/globals.css
+++ b/css/globals.css
@@ -20,7 +20,7 @@ body {
   font-family: "Poppins", sans-serif;
   /* height: 5000px; */
   transition: background 0.3s;
-  /* padding-bottom: 3000px; */
+  padding-bottom: 1rem;
   margin: 0 auto;
   max-width: 1200px;
   justify-content: center;
